:bug: Pin the live-preview region tally and close a mutable leak
I1: LivePreviewServiceRegionTallyTest drives a real gating pass through
LivePreviewService's debounced executor and asserts the resulting BranchTally
carries the region breakdown setRegions() gave it -- both regionCount() and,
independently, the per-cell cellsInRegion() denominator, so the test cannot
pass by regionCount alone matching while regionOf was silently dropped (which
is the exact failure FlowPathPane.buildAnalysisInput()'s own region-count
guard would have turned into silent "no data" rather than a thrown error).
Verified red against the pre-fix 4-arg assignAll call, green against the fix.

A per-branch inRegion(...) assertion (as originally suggested) is not
reachable from outside the class without restructuring it: submitGatingWork()
deep-copies the tree before walking, so BranchTally's IdentityHashMap is keyed
on the copy's Branch instances, and GateTree.transferCounts only copies the
raw count back onto the original tree's branches, never identity. Documented
in the test rather than worked around with reflection.

I2: RegionMask.regionRois() returned Arrays.asList(regionRois), a fixed-size
but mutable view backed directly by the internal array. List.of(regionRois)
is not a safe substitute here -- it throws eagerly on the array's deliberate
null entry (the implicit whole-image region) -- so this wraps the same view
in Collections.unmodifiableList instead, matching regionCounts()'s existing
convention in the same file while still tolerating that null.